2002-08-15  Martin Baulig  <martin@gnome.org>

	* typemanager.cs (IMemberContainer.Type): New property.
	(IMemberContainer.IsInterface): New property.

	The following changes are conditional to BROKEN_RUNTIME, which is
	defined at the top of the file.

	* typemanager.cs (MemberCache.MemberCache): Don't add the base
	class'es members, but add all members from TypeHandle.ObjectType
	if we're an interface.
	(MemberCache.AddMembers): Set the Declared flag if member.DeclaringType
	is the current type.
	(MemberCache.CacheEntry.Container): Removed this field.
	(TypeHandle.GetMembers): Include inherited members.

2002-08-14  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* typemanager.cs: fixed compilation and added a comment on a field that
	is never used.

2002-08-15  Martin Baulig  <martin@gnome.org>

	* class.cs (ConstructorInitializer.Resolve): In the
	Expression.MemberLookup call, use the queried_type as
	invocation_type.

	* typemanager.cs (IMemberContainer.GetMembers): Removed the `bool
	declared' attribute, it's always true.
	(IMemberContainer.Parent, IMemberContainer.Name): New properties.
	(TypeManager.MemberLookup_FindMembers): [FIXME FIXME FIXME] Added
	temporary wrapper for FindMembers which tells MemberLookup whether
	members from the base classes are included in the return value.
	This will go away soon.
	(TypeManager.MemberLookup): Use this temporary hack here; once the
	new MemberCache is completed, we don't need to do the DeclaredOnly
	looping here anymore since the MemberCache will take care of this.
	(TypeManager.IsSubclassOrNestedChildOf): Allow `type == parent'.
	(MemberCache): When creating the MemberCache for a class, get
	members from the current class and all its base classes.
	(MemberCache.CacheEntry.Container): New field.  This is a
	temporary hack until the Mono runtime is fixed to distinguish
	between ReflectedType and DeclaringType.  It allows us to use MCS
	with both the MS runtime and the unfixed Mono runtime without